--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+/*color choice: rgb(23, 37, 51) */
 
 *{
     margin: 0;
@@ -58,6 +59,22 @@ a,
     display: block;
 }
 
+.nav-links-container{
+    width: 100%;
+}
+
+.nav-links{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
+  margin-bottom: 6rem;
+}
+.nav-links a{
+    text-decoration: none;
+    color: black;
+}
 
 .navbar-links li:hover{
     background-color: #555;
@@ -323,7 +340,57 @@ article.icon{
 
 /* CONTACT*/
 #contact{
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p{
+    font-size: large;
+}
+
+.contact-icon{
+    cursor: default;
+    height: 2rem;
+}
+
+.email-icon{
+    height: 2.5rem;
+}
+
+/* FOOTER */
+
+footer{
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p{
+    text-align: center;
 }
 
 @media (max-width: 550px) {
