--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ article.icon{
 
 .contact-info-container p{
     font-size: large;
+    color: black;
 }
 
 .contact-icon{
@@ -393,7 +394,46 @@ footer p{
     text-align: center;
 }
 
-@media (max-width: 550px) {
+@media screen and (max-width: 1400px) {
+   #profile{
+    height: 83vh;
+    margin-bottom: 6rem;
+   }
+   .about-containers{
+    flex-wrap: wrap;
+   }
+}
+
+@media screen and (max-width: 1200px) {
+    #experience,
+    .experience-details-container {
+      margin-top: 2rem;
+    }
+    #profile,
+    .section-container {
+      display: block;
+    }
+    .arrow {
+      display: none;
+    }
+    section,
+    .section-container {
+      height: fit-content;
+    }
+    section {
+      margin: 0 5%;
+    }   
+    .section_pic-container{
+        width: 275px;
+        height: 275px;
+        margin: 0 auto 2rem;
+    }
+    .about-containers {
+      margin-top: 0;
+    }
+}
+
+@media (max-width: 800px) {
     .toggle-button{
         display: flex;
     }
@@ -418,4 +458,62 @@ footer p{
     .navbar-links.active{
         display: flex;
     }
+
+    #contact,
+    footer {
+        height: 40vh;
+    }
+    #profile {
+        height: 83vh;
+        margin-bottom: 0;
+    }
+    article {
+        font-size: 1rem;
+    }
+    footer nav {
+        height: fit-content;
+        margin-bottom: 2rem;
+    }
+    .about-containers,
+    .contact-info-upper-container,
+    .btn-container {
+        flex-wrap: wrap;
+    }
+    .contact-info-container {
+        margin: 0;
+    }
+    .contact-info-container p,
+    .nav-links li a {
+        font-size: 1rem;
+    }
+    .experience-subtitle {
+        font-size: 1.25rem;
+    }
+    .logo {
+        font-size: 1.5rem;
+    }
+    .nav-links {
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+    .section__pic-container {
+        width: auto;
+        height: 46vw;
+        justify-content: center;
+    }
+    .section__text__p2 {
+        font-size: 1.25rem;
+    }
+    .section_text{
+        margin-bottom: 2rem;
+    }
+    .title {
+        font-size: 2rem;
+    }
+    .text-container {
+        text-align: justify;
+    }
 }
+
