--- a/style.css
+++ b/style.css
@@ -255,7 +255,8 @@ section#profile{
     justify-content: center;
     flex-direction: column;
 }
-.about-containers, .about-details-container{
+.about-containers, 
+.about-details-container{
     display: flex;
 }
 .about-pic{
@@ -278,11 +279,11 @@ section#profile{
     border: rgb(53,53,53) 0.1rem solid;
     border-color: rgb(163,163,163);
     text-align: center;
-    border-radius: 1rem;
-    -webkit-border-radius: 1rem;
-    -moz-border-radius: 1rem;
-    -ms-border-radius: 1rem;
-    -o-border-radius: 1rem;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
 }
 
 .section-container{
@@ -333,10 +334,34 @@ article.icon{
     cursor: default;
 }
 
-/* PROJECTS*/
-#projects{
+
+/* PROJECTS SECTION */
+
+#projects {
     position: relative;
 }
+  
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
 
 /* CONTACT*/
 #contact{
@@ -401,6 +426,10 @@ footer p{
    }
    .about-containers{
     flex-wrap: wrap;
+   }
+   #contact,
+   #projects {
+    height: fit-content;
    }
 }
 
