more projects added
+University FYP
+Weather webapp

--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ article.icon{
 
 .project-img {
     border-radius: 2rem;
-    width: 90%;
+    width: 300px;
     height: 90%;
 }
 
@@ -548,6 +548,11 @@ footer p{
     }
     .text-container {
         text-align: justify;
+    }
+    .project-img {
+        border-radius: 2rem;
+        width: 90%;
+        height: 90%;
     }
 }
 
